@@ -77,6 +77,9 @@ Bugs to Fix
 
 Changes up to 0.64
 
+   * LOG FILE CAPABILITIES:  logging of both PyMOL scripts (.pml) and
+     PyMOL program files (.pym)
+
    * mesh_radius cut in half, for better default density figures
 
    * carve command on isomesh
